Fix target dropdown overflow

--- a/themes/default/resources/styles.css
+++ b/themes/default/resources/styles.css
@@ -350,6 +350,9 @@ h6 {
 
 .sidebar-nav {
     padding: 9px 0;
+}
+
+#explorer {
     max-height: 70vh;
     overflow-y: auto;
 }
